<resources>
    <string name="app_name">a Mano</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="groups">Grupos</string>
    <string name="add">Agregar</string>
    <string name="settings">ajustes</string>
    <string name="description_app_icon">app icon</string>
    <string name="log_in">Log in</string>
    <string name="description_wave_image">wave image</string>
    <string name="log_out">Log out</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="profile_image">imagen de perfil</string>
    <string name="name">nombre</string>
    <string name="description_add_new_group_button">crea un nuevo grupo</string>
    <string name="i_paid">Pagué</string>
    <string name="other_paid">Me pagó</string>
    <string name="add_button">Agregar</string>
    <string name="new_group">Nuevo Grupo</string>
    <string name="create_group">Crear Grupo</string>
    <string name="estas_a_mano">Estas a mano!</string>
</resources>